--- a/index.html
+++ b/index.html
@@ -221,21 +221,22 @@
                 <div class="space-y-6">
                     <div class="border-l-4 border-blue-500 pl-6">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-2">
-                            <h3 class="font-bold text-gray-800 text-lg">Senior Software Consultant</h3>
-                            <span class="text-gray-500 text-sm">2020 - Present</span>
+                            <h3 class="font-bold text-gray-800 text-lg">Software Consultant</h3>
+                            <span class="text-gray-500 text-sm">2024 - Present</span>
                         </div>
-                        <p class="text-blue-600 font-semibold mb-2">TechSolutions Inc.</p>
-                        <p class="text-gray-600">Leading digital transformation projects for Fortune 500 companies, architecting scalable solutions, and mentoring development teams.</p>
+                        <p class="text-blue-600 font-semibold mb-2">SchoolCanvas/Carmel Province Muvattupuzha</p>
+                        <p class="text-gray-600"> Streamlined ERP System Processes: Optimized and maintained ERP system workflows, reducing data entry errors by 25% and improving overall operational efficiency. Collaborated with cross-functional teams to ensure accurate data integration and system functionality. </p>
+                        <p class="text-gray-600"> User Training and Support: Conducted training sessions for 50+ employees on ERP system usage, enhancing user proficiency and adoption rates. Provided ongoing technical support, resolving system-related issues promptly to minimize downtime.</p>
                     </div>
-                    <!-- <div class="border-l-4 border-green-500 pl-6">
+                    <div class="border-l-4 border-green-500 pl-6">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-2">
-                            <h3 class="font-bold text-gray-800 text-lg">Full Stack Developer</h3>
-                            <span class="text-gray-500 text-sm">2018 - 2020</span>
+                            <h3 class="font-bold text-gray-800 text-lg">Freelancer</h3>
+                            <span class="text-gray-500 text-sm">2017 - Present</span>
                         </div>
-                        <p class="text-green-600 font-semibold mb-2">InnovateTech</p>
-                        <p class="text-gray-600">Developed and maintained web applications using modern JavaScript frameworks, collaborated with cross-functional teams.</p>
+                        <p class="text-green-600 font-semibold mb-2">Graphical Design, Video & Audio Editing, Making Website</p>
+                        <p class="text-gray-600">Proficient in graphic design, video and audio editing, and website development, with a proven ability to create visually compelling and functional digital content.</p>
                     </div>
-                    <div class="border-l-4 border-purple-500 pl-6">
+                    <!-- <div class="border-l-4 border-purple-500 pl-6">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-2">
                             <h3 class="font-bold text-gray-800 text-lg">Software Engineer</h3>
                             <span class="text-gray-500 text-sm">2016 - 2018</span>
@@ -414,3 +415,4 @@ PROJECTS
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96843a20e6977f76',t:'MTc1NDAzOTY4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
